# zzutil

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  command.gperf  meson.build
.github/workflows/: tests.yml
src/: memcount.h  memcount_avx2.c  wc.c
